--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,23 @@
 	<licenses>
 		<license/>
 	</licenses>
+	<build>
+	    <plugins>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-shade-plugin</artifactId>
+		    <version>3.4.1</version>
+		    <executions>
+			<execution>
+			    <phase>package</phase>
+			    <goals>
+				<goal>shade</goal>
+			    </goals>
+			</execution>
+		    </executions>
+		</plugin>
+	    </plugins>
+	</build>	
 	<developers>
 		<developer>
 			<name>tortoiseDev</name>
@@ -47,7 +64,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>			
+		</dependency>
+
+		<dependency>
+		    <groupId>org.apache.kafka</groupId>
+		    <artifactId>kafka-clients</artifactId>
+		    <version>3.9.0</version>
+		</dependency>		
 	</dependencies>
 	
 	<profiles>
